# LaplacianDeformation

./: CMakeLists.txt  README.md
inc/: Deformer.h  Manager.h  Model.h
shader/: default.fs  default.vs  interact.fs  interact.vs  main.fs  main.vs
src/: Deformer.cpp  Manager.cpp  Model.cpp  main.cpp
